Ensure separator block margin is properly aligned

--- a/themes/genesis-base-child-theme/assets/css/editor-style.css
+++ b/themes/genesis-base-child-theme/assets/css/editor-style.css
@@ -1111,7 +1111,7 @@ hr.wp-block-separator {
   .acf-separator-block.alignfull {
     width: 100vw; }
   .acf-separator-block.no-margin {
-    margin: 0; }
+    margin-bottom: 0; }
   .acf-separator-block.center-align {
     justify-content: center; }
   .acf-separator-block.right-align {
