--- a/themes/genesis-base-child-theme/assets/scss/partials/blocks/acf/_blocks-separator.scss
+++ b/themes/genesis-base-child-theme/assets/scss/partials/blocks/acf/_blocks-separator.scss
@@ -17,7 +17,7 @@
      }
 
      &.no-margin {
-          margin: 0;
+          margin-bottom: 0;
      }
 
      &.center-align {
